# E-commerce

./: .coverage  .gitignore  README.md  pyproject.toml  pyvenv.cfg
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  activate.fish
src/: base_order.py  category.py  exceptions.py  new_product.py  order.py  print_mixin.py  product.py  product_iterator.py  utils.py
tests/: .coverage  conftest.py  test_category.py  test_new_products.py  test_order.py  test_print_mixin.py  test_product.py
