[project]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = [
    {name = "Artem Chirikov",email = "Chirik2000xd@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
pytest = "^8.4.1"


[tool.poetry.group.lint.dependencies]
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"

[tool.black]
line-length = 119
exclude = """.git"""

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true
exclude = 'venv'
